fix z-index, add top position

--- a/journalia_frontend/src/components/pages/Calendar/scss/Calendar.scss
+++ b/journalia_frontend/src/components/pages/Calendar/scss/Calendar.scss
@@ -3,4 +3,8 @@
 
 #calendar-container {
     background-color: adjust-color($cultured, $alpha: -.5);
+
+    top: 3rem;
+    position:relative;
+    z-index: 10;
 }
